自动化测试框架，基础框架

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,8 @@
 [pytest]
 
-addopts = -vs
-testpaths = ./testcase/test_api
+addopts = -vs --alluredir=./temps --clean-alluredir
+
+testpaths = ./testcase
 python_files = test_*.py
 python_classes = Test*
 python_functions = test
